gnome shell: fix jump effect on calendar

--- a/Sunset-Dark/gnome-shell/gnome-shell.css
+++ b/Sunset-Dark/gnome-shell/gnome-shell.css
@@ -619,7 +619,6 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   font-size: 7pt;
 }
 .calendar .calendar-day {
-  border-width: 0;
   border-width: 2px;
   border-style: solid;
   border-color: transparent;
@@ -634,12 +633,11 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .calendar .calendar-nonwork-day {
   color: #9f9b9b;
   font-weight: bold;
-  border-bottom-width: 1px;
-  border-top-width: 0;
-  border-left-width: 0;
-  border-right-width: 0;
-  border-color: #2a2727;
+  box-shadow: inset 0 -1px 0 0 #2a2727;
   border-radius: 0 !important;
+  border-width: 2px;
+  border-style: solid;
+  border-color: transparent;
 }
 .calendar .calendar-today {
   font-weight: bold;
