--- a/Sunset/gnome-shell/gnome-shell.css
+++ b/Sunset/gnome-shell/gnome-shell.css
@@ -618,7 +618,6 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
   font-size: 7pt;
 }
 .calendar .calendar-day {
-  border-width: 0;
   border-width: 2px;
   border-style: solid;
   border-color: transparent;
@@ -633,12 +632,11 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .calendar .calendar-nonwork-day {
   color: #686161;
   font-weight: bold;
-  border-bottom-width: 1px;
-  border-top-width: 0;
-  border-left-width: 0;
-  border-right-width: 0;
-  border-color: #bbb0b0;
+  box-shadow: inset 0 -1px 0 0 #bbb0b0;
   border-radius: 0 !important;
+  border-width: 2px;
+  border-style: solid;
+  border-color: transparent;
 }
 .calendar .calendar-today {
   font-weight: bold;
